scrollbar fix attempt °1

--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ html{
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,0.25);
+}
+
 *{
   color: white;
   font-family: bahnschrift;
@@ -549,7 +556,7 @@ tabbable#game {
     }
 
     & .description {
-      overflow: scroll;
+      overflow-y: scroll;
       height: 10ch;
       display: block;
     }
